# proxypool

./: .dockerignore  .gitignore  AGENTS.md  COMPREHENSIVE_TEST_REPORT_FINAL.md  CONTRIBUTING.md  Dockerfile  FINAL_TEST_REPORT_WAVE26.md  Makefile  README.md  TEST_REPORT.md  WAVE_18_4_QA_REPORT.md  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  requirements.txt  test_report.md
.claude/: iteration-log.md
configs/: singbox-routes.json  sources.txt
docs/: phase1-architecture.md  phase2-implementation.md  product-benchmark.md
docs/superpowers/specs/: 2026-05-16-proxy-chain-session-egress-design.md  2026-05-16-single-port-http-proxy-gateway-design.md
e2e/: add-proxy.spec.ts  chain-health.spec.ts  chain-health10.spec.ts  chain-health12.spec.ts  chain-health13.spec.ts  chain-health14.spec.ts  chain-health15.spec.ts  chain-health17.spec.ts  chain-health18.spec.ts  chain-health19.spec.ts  chain-health2.spec.ts  chain-health21.spec.ts  chain-health23.spec.ts  chain-health24.spec.ts  chain-health25.spec.ts  chain-health26.spec.ts  chain-health27.spec.ts  chain-health28.spec.ts  chain-health29.spec.ts  chain-health3.spec.ts  chain-health30.spec.ts  chain-health31.spec.ts  chain-health32.spec.ts  chain-health33.spec.ts  chain-health34.spec.ts  chain-health35.spec.ts  chain-health36.spec.ts  chain-health37.spec.ts  chain-health38.spec.ts  chain-health39.spec.ts  chain-health4.spec.ts  chain-health40.spec.ts  chain-health41.spec.ts  chain-health42.spec.ts  chain-health43.spec.ts  chain-health44.spec.ts  chain-health45.spec.ts  chain-health46.spec.ts  chain-health47.spec.ts  chain-health48.spec.ts  (+110 more)
guide/: AGENT.md  README.md
guide/api/: README.md
guide/backend/: README.md
guide/collector/: README.md
guide/deploy/: docker.md
guide/gateway/: README.md
guide/geoip/: README.md
guide/pool/: README.md
guide/scheduler/: README.md
guide/storage/: README.md
guide/tasks/: README.md
guide/tester/: README.md
guide/webui/: README.md
proxypool/: __init__.py  logging_config.py  main.py  models.py  settings.py
proxypool/api/: __init__.py  app.py  dependencies.py  errors.py  gateway_helpers.py  metrics.py  monitoring.py  schemas.py  security.py
proxypool/api/routers/: __init__.py  backend.py  chain.py  gateway.py  health.py  pools.py  proxies.py  settings.py  subscriptions.py  tasks.py  tester.py
proxypool/backend/: __init__.py  chain_instance_manager.py  egress_backend.py  mihomo_config.py  mihomo_manager.py  resin_client.py  resin_manager.py  singbox_manager.py
proxypool/collector/: fetcher.py  parser.py  service.py
proxypool/gateway/: __init__.py  config.py  config_service.py  connect_session.py  forward_proxy.py  http_gateway.py  runtime.py  session_extractor.py
proxypool/geoip/: __init__.py  service.py
proxypool/pool/: __init__.py  chain_builder.py  chain_service.py  health_manager.py  node_pool.py  protocol_compat.py  scoring.py  service.py  sticky_router.py
proxypool/scheduler/: __init__.py  jobs.py
proxypool/security/: __init__.py  api_helpers.py  file_validator.py  rate_limiter.py  url_validator.py
proxypool/storage/: _helpers.py  base.py  connection.py  health_storage.py  pool_mixin.py  proxy_mixin.py  sqlite.py  subscription_mixin.py
proxypool/tasks/: __init__.py  manager.py
proxypool/tester/: __init__.py  service.py  singbox.py
proxypool/webui/: index.html  package-lock.json  package.json  vite.config.js
proxypool/webui/css/: main.css
proxypool/webui/js/: app.js
proxypool/webui/src/: App.vue  appOptions.js  main.js  rootProxyMixin.js
proxypool/webui/src/components/: GatewayStatusPanel.vue
proxypool/webui/src/components/common/: EmptyState.vue  ErrorBoundary.vue  ErrorState.vue  FilterPanel.vue  LoadingState.vue  PaginationBar.vue  StatCard.vue  TaskProgress.vue
proxypool/webui/src/components/layout/: Breadcrumb.vue
proxypool/webui/src/composables/: useButtonState.js  useDarkMode.js  usePagination.js  useProxyFilters.js  useTaskPolling.js
proxypool/webui/src/core/: api.js  constants.js  state.js  utils.js
proxypool/webui/src/styles/: main.css
proxypool/webui/src/views/: ConfigHistoryPage.vue  DashboardPage.vue  DocsPage.vue  PortsPage.vue  ProxiesPage.vue  ProxyPoolsPage.vue  PublishedSubscriptionsPage.vue  SettingsPage.vue  SubscriptionsPage.vue  SystemDiagnosticsPage.vue  TasksPage.vue
scripts/: import_output_sources.py  import_sources_file.py  run_once_tester.py
tests/: conftest.py  test_api_additional_coverage.py  test_api_advanced_proxy_features.py  test_api_backend_coverage.py  test_api_backend_port_range.py  test_api_chain_coverage.py  test_api_chain_diagnostics.py  test_api_collector.py  test_api_comprehensive_coverage.py  test_api_gateway_coverage.py  test_api_gateway_router_coverage.py  test_api_health_coverage.py  test_api_improvements.py  test_api_init_coverage.py  test_api_metrics.py  test_api_monitoring.py  test_api_monitoring_endpoints.py  test_api_performance.py  test_api_pools.py  test_api_pools_coverage.py  test_api_proxies_coverage.py  test_api_published_subscriptions.py  test_api_security.py  test_api_settings.py  test_api_settings_coverage.py  test_api_single_proxy_test.py  test_api_subscription_intelligence.py  test_api_subscriptions_async.py  test_api_tasks.py  test_api_tasks_stop.py  test_api_tester.py  test_api_tester_filters.py  test_api_wave3_9_endpoints.py  test_app_coverage.py  test_app_deep_coverage.py  test_app_endpoints_coverage.py  test_app_inner_helpers_coverage.py  test_app_router_coverage.py  test_backend_manager.py  test_base_storage.py  (+91 more)
