[project]
name = "proxypool"
version = "0.2.0"
description = "High-performance proxy pool manager with health checks, chain routing, and WebUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "ProxyPool Team"}
]
keywords = ["proxy", "pool", "fastapi", "vpn", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]

dependencies = [
    # Core backend
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "pydantic>=2.11.0,<2.12.0",
    "pydantic-settings>=2.8.0,<2.9.0",

    # Storage and scheduling
    "SQLAlchemy>=2.0.40,<2.1.0",
    "aiosqlite>=0.21.0,<0.22.0",
    "APScheduler>=3.11.0,<4.0.0",

    # Networking and collector
    "httpx>=0.28.0,<0.29.0",
    "PyYAML>=6.0.0,<7.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "orjson>=3.10.0,<4.0.0",

    # Security
    "slowapi>=0.1.9,<1.0.0",

    # System monitoring
    "psutil>=5.9.0,<6.0.0",

    # Optional templating for lightweight WebUI
    "Jinja2>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",

    # Linting
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",

    # Pre-commit
    "pre-commit>=3.7.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/proxypool"
Documentation = "https://your-org.github.io/proxypool"
Repository = "https://github.com/your-org/proxypool"
Issues = "https://github.com/your-org/proxypool/issues"

[project.scripts]
proxypool = "proxypool.main:main"

# ---- Build System ----

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxypool"]

# ---- Pytest Configuration ----

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks security tests",
    "integration: marks integration tests",
]
addopts = [
    "-ra",  # Show all non-passing tests summary
    "--strict-markers",  # Strict mode, forbid undeclared markers
    "--tb=short",  # Short traceback
]

# ---- Coverage Configuration ----

[tool.coverage.run]
source = ["proxypool"]
branch = true
omit = [
    "tests/*",
    "proxypool/webui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
show_missing = true
skip_covered = true
fail_under = 70  # Minimum coverage 70%

# ---- Ruff Linter Configuration ----

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in default argument (FastAPI dependency injection)
    "ARG",     # unused arguments (FastAPI DI, abstract methods, callbacks)
    "RUF002",  # ambiguous unicode in comments/docstrings
    "TC001",   # type-checking-only imports (style preference)
    "TC003",   # type-checking-only standard library imports
    "SIM117",  # nested with statements (readability preference)
    "S104",    # binding all interfaces (needed for containerized services)
    "S108",    # probable insecure /tmp usage (sandboxed environment)
    "S603",    # subprocess call without shell=True (we control inputs)
    "S608",    # SQL injection via string formatting (we use parameterized queries)
    "S310",    # suspicious URL open usage (we validate with is_safe_url)
    "S110",    # try-except-pass (legitimate in collection/interrupt code)
    "S112",    # try-except-continue (legitimate in loop processing)
    "S105",    # possible hardcoded password (false positives in test fixtures)
    "S324",    # insecure hash (we use SHA1 for node key generation, not security)
    "B904",    # raise without from inside except (verbose in simple cases)
    "RUF059",  # unused variable (intentional unpacking patterns)
    "SIM105",  # contextlib.suppress (style preference)
    "SIM102",  # collapsible if (readability preference)
    "SIM103",  # needless bool (readability preference)
    "UP042",   # type alias convention (Python 3.12 style)
    "A002",    # shadowing builtin (common in compact functions)
    "B006",    # mutable default argument (FastAPI patterns)
    "B007",    # unused loop variable (common iteration patterns)
    "B023",    # function uses loop variable (legitimate closures)
    "DTZ005",  # datetime.utcnow without timezone (legacy code, non-critical)
    "E402",    # module level import not at top (conditional imports)
    "N818",    # exception name not ending in Error (domain model names)
"RUF003",  # ambiguous character in comment (CJK content)
    "RUF005",  # consider unpacking (readability preference)
    "RUF012",  # mutable class variable (dataclass patterns)
    "RUF013",  # implicit Optional (legacy typing)
    "RUF022",  # __all__ not sorted (ordering preference)
    "SIM108",  # ternary operator (readability preference)
    "TC002",   # type-checking-only third-party imports
    "W291",    # trailing whitespace (auto-fixable residual)
    "F811",    # redefined unused name (test overrides)
    "F401",    # unused import (test fixtures)
    "PTH123",  # open() should be Path.open() (readability in seek/tell patterns)
    "RUF001",  # ambiguous unicode (Chinese punctuation in descriptions is intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "F841"]  # allow assert, /tmp, unused vars in tests
"proxypool/webui/*" = ["ALL"]  # ignore all rules for frontend

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- Mypy Configuration ----

[tool.mypy]
python_version = "3.12"
strict = false  # Start with non-strict, enable gradually
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs for now
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
